1000: add faraggi as editor (#402)

--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -75,8 +75,10 @@ Current ECIP editors:
 * Mr. Meows D. Bits (@meowsbits)
 * Talha Cross (@soc1c)
 * Zachary Belford (@BelfordZ)
+* Felipe Faraggi (@faraggi)
 * r0n1n (@gitr0n1n)
 * Stevan Lohja (@stevanlohja)
+
 
 Former ECIP editors:
 * Wei Tang (@sorpaas)
