--- a/_specs/ecip-1102.md
+++ b/_specs/ecip-1102.md
@@ -8,7 +8,7 @@ status: WIP
 type: Meta
 created: 2021-02-03
 complementary to: ECIP-1098 Proto Treasury System 
-license: Apache-2
+license: CC-BY-SA
 ---
 
 ### Abstract
@@ -21,7 +21,7 @@ Currently, the ETC Proto Treasury System (p-ECTS) proposal ECIP-1098 suggests to
 
 It is the [opinion](https://github.com/input-output-hk/ECIPs/issues/2#issuecomment-702237160) of this author that Gitcoin is not an optimal system to distribute Ethereum Classic treasury funds for projects by individuals, developers, or teams who want to contribute to ETC. Gitcoin is a private Ethereum native project owned, in part, by [ConsenSys](https://media.consensys.net/gitcoin-joins-consensys-announces-pilot-projects-f5a0955de9d6), it uses quadratic funding which exponentiates payments to grantees based on the small contributions of strangers, and constitutes another information hurdle ETC community members would need to overcome to understand who are the grantees, what are their projects, and if they are actually implementing them adequately.
 
-The Etherplan Consensus Engine, a private Ethereum Classic native project owned by Donald McIntyre, founder of [Etherplan](https://etherplan.com/about/), is proposed as the replacement of Gitcoin in the p-ECTS so ETC community members may have a direct say in what projects are funded on a rough consensus basis, which is ETC's historical method of making decisions, rather than on the contributions of third parties.
+The Etherplan Consensus Engine, an Ethereum Classic native project by Donald McIntyre, founder of [Etherplan](https://etherplan.com/about/), is proposed as the replacement of Gitcoin in the p-ECTS so ETC community members may have a direct say in what projects are funded on a rough consensus basis, which is ETC's historical method of making decisions, rather than on the contributions of third parties.
 
 The ECE pool of the ETC ecosystem would have a GitHub repo to edit, control, and associate funding proposals with a similar, but not identical, process as the Ethereum Classic Improvement Proposal (ECIP) process.
 
@@ -58,14 +58,12 @@ The Etherplan Consensus Engine helps decentralized groups of any kind manage poo
 
 ### Disclaimer
 
-The Etherplan Consensus Engine is a commercial invention by Donald McIntyre, founder of Etherplan. The ECE dapp for the ETC community will be licensed for free, for exclusive use, for its intended purposes of benefiting the Ethereum Classic blockchain, for the ETC community and ecosystem. Etherplan will not charge any commissions or fees for its use by the Ethereum Classic blockchain ecosystem in perpetuity if they implement it. 
+The Etherplan Consensus Engine is an invention by Donald McIntyre, founder of Etherplan. The ETC ECE pool, dapp, and process may serve as a model and test case of the Etherplan Consensus Engine in general. Etherplan may use this model and test case to further develop a dapp for commercial use, similar to how Gitcoin is a commercia dapp, plausibly building an Etherplan Consensus Engine platform for general use by decentralized groups of any kind.
 
-However, the ETC ECE pool, dapp, and process may serve as a model and test case of the Etherplan Consensus Engine in general. Etherplan may use this model and test case to further develop a dapp for commercial use, plausibly building an Etherplan Consensus Engine platform for general use by decentralized groups of any kind.
+The above means that, indeed, the ECE is a bona fide proposal as the best decision making process for the ETC community to distribute treasury funds, but it will also benefit Etherplan for private business purposes in case it launches the ECE model as a general use commercial dapp. Consequently, any potential support or investment of ETC community resources in building the first ECE pool may directly or indirectly benefit Etherplan.
 
-The above means that, indeed, the ECE is a bona fide proposal as the best decision making process for the ETC community to distribute treasury funds, but it will also benefit Etherplan for private business purposes in case it launches the ECE model as a general use commercial dapp. Consequently, any potential support or investment of ETC community resources in building the first ECE pool may directly benefit Etherplan.  
+However, The Etherplan Consensus Engine is licensed as an open source project under CC-BY-SA as seen below.
 
 ### Copyright/Licensing
 
-The Etherplan Consensus Engine is an invention and intellectual property of Donald McIntyre, founder of Etherplan.
-
-This particular ECIP-1102 is licensed under Apache-2.
+<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>..
