--- a/_specs/ecip-1102.md
+++ b/_specs/ecip-1102.md
@@ -48,9 +48,11 @@ The Etherplan Consensus Engine is a native ETC project that is designed to demon
 
 The description of the ECE smart contracts, their functionality, and the general dapp structure are specified in the Etherplan Consensus Engine white paper linked above. The ECE pool for Ethereum Classic to send the 10% of p-ECTS funds could be built with ETC community resources, or other funding sources as this author is not a developer or engineer and does not count with such resources.
 
-The Etherplan Consensus Engine would need intense testing, peer review through this proposal, and smart contracts should be audited thoroughly before sending funds and processing real funding proposals on them.
+The Etherplan Consensus Engine would need intense testing, peer review through this proposal, and smart contracts should be audited thoroughly before sending funds and processing real funding proposals on them. 
 
-Building the ECE for this proposal as a community effort and investment could potentially benefit Etherplan privately as explained in the disclaimer section below. However, except for regular layer 1 or layer 2 network gas fees, no fees or any revenues to Etherplan will ever be charged from the ETC ECE pool mentioned in this document. 
+Participants, admins, and users will pay the regular layer 1 or layer 2 network gas fees whe making proposalas, deploying them or voting on them.
+
+Building the ECE for this proposal as a community effort and investment could potentially benefit Etherplan privately as explained in the disclaimer section below.
 
 ### About The Etherplan Consensus Engine
 
