--- a/_specs/ecip-1102.md
+++ b/_specs/ecip-1102.md
@@ -50,7 +50,7 @@ The description of the ECE smart contracts, their functionality, and the general
 
 The Etherplan Consensus Engine would need intense testing, peer review through this proposal, and smart contracts should be audited thoroughly before sending funds and processing real funding proposals on them. 
 
-Participants, admins, and users will pay the regular layer 1 or layer 2 network gas fees whe making proposalas, deploying them or voting on them.
+Participants, admins, and users will pay the regular layer 1 or layer 2 network gas fees when making proposals, deploying them, or voting on them.
 
 Building the ECE for this proposal as a community effort and investment could potentially benefit Etherplan privately as explained in the disclaimer section below.
 
