--- a/_specs/ecip-1049.md
+++ b/_specs/ecip-1049.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1049
 title: Change the ETC Proof of Work Algorithm to Keccak256
-status: Rejected
+status: Draft
 type: Standards Track
 category: Core
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/394
@@ -11,7 +11,7 @@ created: 2019-01-08
 ---
 
 ### Abstract
-A proposal to replace the current Ethereum Classic proof of work algorithm with Keccak-256.
+A proposal to replace the current Ethereum Classic proof of work algorithm Etchash with Keccak-256.
 
 ### Motivation
 * A response to the recent double-spend attacks against Ethereum Classic. Most of this hashpower was rented or came from other chains, specfically Ethereum (ETH). A seperate proof of work algorithm would encourage the development of a specialized Ethereum Classic mining community, and blunt the ability for attackers to purchase mercenary hash power on the open-market. 
@@ -81,4 +81,5 @@ The area where most of the changes will be in `multi-geth/consensus`
 5. https://github.com/ethereumclassic/ECIPs/issues/362
 6. https://github.com/ethereumclassic/ECIPs/issues/382
 7. https://github.com/ethereum/EIPs/issues/2951
-8. https://github.com/ethereumclassic/ECIPs/issues/394
+8. https://vimeo.com/464336957
+9. https://github.com/ethereumclassic/ECIPs/issues/394
