--- a/_specs/ecip-1102.md
+++ b/_specs/ecip-1102.md
@@ -41,7 +41,7 @@ The ECE pool of the ETC ecosystem would have a GitHub repo to edit, control, and
 
 -   When ECFPs are merged, they must also be entered into the ECE dapp where all the corresponding smart contracts will be deployed on the layer 2 PoS blockchain (possibly Cardano) and ETC as the base layer, or layer 1.
 
--   When ECFPs are entered in the ECE, a proof of authority list of ETC voting participants will analyize and vote on them. 
+-   When ECFPs are entered in the ECE, a proof of authority list of ETC voting participants will analyze and vote on them. 
 
 -   When ECFPs are processed and voted on in the ECE dapp, they will either be approved for funding or rejected as per the ECE protocol.
 
