--- a/_specs/ecip-1102.md
+++ b/_specs/ecip-1102.md
@@ -114,7 +114,7 @@ See a short explanation of the ECE dapp here: https://etherplan.com/2021/02/04/t
 
 ## Disclaimer
 
-The Etherplan Consensus Engine is an invention by Donald McIntyre, founder of Etherplan. The ETC ECE pool, dapp, and process may serve as a model and test case of the Etherplan Consensus Engine in general. Etherplan may use this model and test case to further develop a dapp for commercial use, similar to how Gitcoin is a commercial dapp, plausibly building an Etherplan Consensus Engine platform for general use by decentralized groups of any kind.
+The Etherplan Consensus Engine is an invention by Donald McIntyre, founder of Etherplan. The ETC ECE pool, dapp, and process may serve as a model and leading case of the Etherplan Consensus Engine in general. Etherplan may use this model and leading case to further develop a dapp for commercial use, similar to how Gitcoin is a commercial dapp, plausibly building an Etherplan Consensus Engine platform for general use by decentralized groups of any kind.
 
 The above means that, indeed, the ECE is a bona fide proposal as the best decision making process for the ETC community to distribute treasury funds, but it will also benefit Etherplan for private business purposes in case it launches the ECE model as a general use commercial dapp. Consequently, any potential support or investment of ETC community resources in building the first ECE pool may directly or indirectly benefit Etherplan.
 
