--- a/_specs/ecip-1102.md
+++ b/_specs/ecip-1102.md
@@ -64,13 +64,15 @@ The Etherplan Consensus Engine would need intense testing, peer review through t
 
 Participants, admins, and users will pay the regular layer 1 or layer 2 network gas fees when making proposals, deploying them, or voting on them.
 
+To the knowledge of this author, bridges or other interoperability technologies are not currently in place between Ethereum Classic and Cardano, or other possible candidate layer 2 proof of stake networks. These would have to be developed, implemented, and deployed on both layer 1 and layer 2 networks for the ECE to work as designed.
+
 Building the ECE for this proposal as a community effort and investment could potentially benefit Etherplan privately as explained in the disclaimer section below.
 
-## Risks
+## Risks and Weaknesses
 
-In its current state, the Etherplan Consensus Engine presents two centralization risks explained with their possible solutions in the following points.
+In its current state, the Etherplan Consensus Engine presents two centralization risks and a weakeness explained with their possible solutions in the following points.
 
-### •   Who Gets a Vote and Based on What Criteria?
+### Who gets a vote and based on what criteria?
 
 **Problem:**
 
@@ -94,7 +96,7 @@ Once there is a large amount of participants, then a threshold may be set. It is
 
 For all the other anonymous node operators in ETC, it is likely they are largely exchanges, wallets, and dapps, so all should be invited. The proof of authority list may be edited with PRs or votes on the ECE to continuously add or delete keys (sometimes people also lose their private keys, so this mechanism may be used to change public keys of existing participants as well).
 
-### •   How Can Proposals Be Grouped as Competing or Complementary in a Safe Way?
+### How can roposals be grouped as competing or complementary in a safe way?
 
 **Problem:**
 
@@ -105,6 +107,16 @@ Maliciously relating unrelated proposals, entering fake proposals to up or downv
 In this early stage of the ECE, it would be better to do the entry and association of proposals manually as described in the specification, similar to the Ethereum Classic ECIP process. The proposals may start as pull requests (PRs) on Github, and then the pool admins, together with proposers, can clean and polish them and associate them, just like ECIPs are processed by editors and authors today.
 
 In a future ECE version, more autonomous, trust minimized, or rough consensus based automated association solutions may be proposed and integrated.
+
+### Are there bridges or interoperability technologies in place to implement the layered design of the Etherplan Consensus Engine?
+
+**Problem:**
+
+The Etherplan Consensus Engine is designed to have a proof of stake network as its execution layer, or layer 2, which would need to interoperate with Ethereum Classic as the base layer, or layer 1. To the knowledge of this author, there are no known such solutions in place at the time of this writing.
+
+**Possible solution:**
+
+There are several proposals in the ECIP pipeline that would enable interoperability between ETC and other blockchains. Such solutions are [ECIP-1049](https://ecips.ethereumclassic.org/ECIPs/ecip-1049), the integration of Keccak 256, [ECIP-1055](https://ecips.ethereumclassic.org/ECIPs/ecip-1055), Flyclient, and [ECIP-1046](https://ecips.ethereumclassic.org/ECIPs/ecip-1046), Merkle inclusion proofs to enable [NiPoPoWs](https://nipopows.com/). As several engineers and developer teams are interested in these upgrades, and they are gaining rough consensus in the ETC ecosystem, it is entirely possible for these to be integrated, making possible the implementation of this ECIP. As IOHK is the main technical supporter of the Cardano blockchain, and all blockchains will eventually need to interoperate with other networks, they could work on the upgrades needed on that network's side to be able to interoperate with ETC.
 
 ## About The Etherplan Consensus Engine
 
