--- a/_specs/ecip-1102.md
+++ b/_specs/ecip-1102.md
@@ -31,7 +31,7 @@ The ECE pool of the ETC ecosystem would have a GitHub repo to edit, control, and
 
 -   Create a repo within the Ethereum Classic GitHub organization for individuals, developers, and teams to enter proposals as pull requests.
 
--   This repo may be called the Ethereum Classic Funding Proposal (ECFP) process and it's URL may be `/github.com/ethereumclassic/ECFPs`.
+-   This repo may be called the Ethereum Classic Funding Proposal (ECFP) process and its URL may be `/github.com/ethereumclassic/ECFPs`.
 
 -   Each funding proposal may be called an ECFP.
 
@@ -70,7 +70,7 @@ Building the ECE for this proposal as a community effort and investment could po
 
 ## Risks and Weaknesses
 
-In its current state, the Etherplan Consensus Engine presents two centralization risks and a weakeness explained with their possible solutions in the following points.
+In its current state, the Etherplan Consensus Engine presents two centralization risks and a weakness explained with their possible solutions in the following points.
 
 ### Who gets a vote and based on what criteria?
 
@@ -96,7 +96,7 @@ Once there is a large amount of participants, then a threshold may be set. It is
 
 For all the other anonymous node operators in ETC, it is likely they are largely exchanges, wallets, and dapps, so all should be invited. The proof of authority list may be edited with PRs or votes on the ECE to continuously add or delete keys (sometimes people also lose their private keys, so this mechanism may be used to change public keys of existing participants as well).
 
-### How can roposals be grouped as competing or complementary in a safe way?
+### How can proposals be grouped as competing or complementary in a safe way?
 
 **Problem:**
 
