--- a/_specs/ecip-1049.md
+++ b/_specs/ecip-1049.md
@@ -2,17 +2,16 @@
 lang: en
 ecip: 1049
 title: Change the ETC Proof of Work Algorithm to Keccak256
-status: Last Call
-review-period-end: 2020-10-09
+status: Draft
 type: Standards Track
 category: Core
-discussions-to: https://github.com/ethereumclassic/ECIPs/issues/13
+discussions-to: https://github.com/ethereumclassic/ECIPs/issues/394
 author: Alexander Tsankov <alexander.tsankov@colorado.edu>
 created: 2019-01-08
 ---
 
 ### Abstract
-A proposal to replace the current Ethereum Classic proof of work algorithm with Keccak-256.
+A proposal to replace the current Ethereum Classic proof of work algorithm Etchash with Keccak-256.
 
 ### Motivation
 * A response to the recent double-spend attacks against Ethereum Classic. Most of this hashpower was rented or came from other chains, specfically Ethereum (ETH). A seperate proof of work algorithm would encourage the development of a specialized Ethereum Classic mining community, and blunt the ability for attackers to purchase mercenary hash power on the open-market. 
@@ -56,7 +55,7 @@ Here is an analysis of Monero's nonce-distribution for "cryptonight", an algorit
 Based on analysis of the EVM architecture [here](https://cdn.discordapp.com/attachments/223675625334898688/534597157693685760/eth.jpg) there are two main pieces that need to be changed:
 
 1. The Proof of work function needs to be replaced with Keccak256
-1. The Function that checks the nonce-header  in the block needs to know to accept Keccak256 hashes as valid for a block.
+2. The Function that checks the nonce-header  in the block needs to know to accept Keccak256 hashes as valid for a block.
 
 ![example](https://i.imgur.com/2hobqOL.png)
 
@@ -67,8 +66,20 @@ The area where most of the changes will be in `multi-geth/consensus`
 ### References: 
 
 1. https://github.com/ethereum/wiki/wiki/Dagger-Hashimoto#introduction
-1. https://en.wikipedia.org/wiki/SHA-3
-1. https://satoshi.nakamotoinstitute.org/emails/cryptography/2/
-1. https://github.com/0xbitcoin/white-paper
-1. https://github.com/EthereumCommonwealth/Auditing/issues/102
-1. https://etherscan.io/address/0xb6ed7644c69416d67b522e20bc294a9a9b405b31
+2. https://en.wikipedia.org/wiki/SHA-3
+3. https://satoshi.nakamotoinstitute.org/emails/cryptography/2/
+4. https://github.com/0xbitcoin/white-paper
+5. https://github.com/EthereumCommonwealth/Auditing/issues/102
+6. https://etherscan.io/address/0xb6ed7644c69416d67b522e20bc294a9a9b405b31
+
+### Related Discussions: 
+
+1. https://github.com/ethereumclassic/ECIPs/pull/8
+2. https://github.com/ethereumclassic/ECIPs/issues/13
+3. https://github.com/ethereumclassic/ECIPs/issues/342
+4. https://github.com/ethereumclassic/ECIPs/issues/333
+5. https://github.com/ethereumclassic/ECIPs/issues/362
+6. https://github.com/ethereumclassic/ECIPs/issues/382
+7. https://github.com/ethereum/EIPs/issues/2951
+8. https://vimeo.com/464336957
+9. https://github.com/ethereumclassic/ECIPs/issues/394
