--- a/_specs/ecip-1104.md
+++ b/_specs/ecip-1104.md
@@ -5,7 +5,7 @@ title: Only Support Dark Mode
 status: Draft
 type: Standards Track
 category: Core
-discussions-to: 
+discussions-to: https://github.com/ethereumclassic/ECIPs/issues/417
 authors: Luke Williams (@iquidus), Mr. Official Meows (@meowsbits), Chris (aka Captain Bruiser) (@ziogaschr)
 created: 2021-04-01
 license: Apache-2
