--- a/_specs/ecip-1103.md
+++ b/_specs/ecip-1103.md
@@ -22,8 +22,6 @@ Ethereum Foundation (ETH) network via the _Berlin_ hardforks. The proposed
 changes for Ethereum Classic's _Berlin_ upgrade include:
 
 - Reprices the gas cost of the `ModExp` (`0x00..05`) precompile.
-- Introduces three opcodes to support subroutines: `BEGINSUB`, `JUMPSUB`, and
-  `RETURNSUB`.
 - Increases gas cost for `SLOAD`, `*CALL`, `BALANCE`, `EXT*`, and
   `SELFEDESTRUCT` when used for the first time in a transaction.
 - Defines a new transaction type that is an envelope for future transaction
@@ -34,9 +32,9 @@ changes for Ethereum Classic's _Berlin_ upgrade include:
 This document proposes the following blocks at which to implement these changes
 in the Classic networks:
 
-- `3_585_073` on Mordor Classic PoW-testnet (April, 2021)
-- `4_110_482` on Kotti Classic PoA-testnet (April, 2021)
-- `12_759_699` on Ethereum Classic PoW-mainnet (May, 2021)
+- `TBD` on Mordor Classic PoW-testnet (TBD)
+- `TBD` on Kotti Classic PoA-testnet (TBD)
+- `TBD` on Ethereum Classic PoW-mainnet (TBD)
 
 For more information on the opcodes and their respective EIPs and
 implementations, please see the _Specification_ section of this document.
@@ -53,8 +51,6 @@ Technical specifications for each EIP can be found at those documents
 respectively:
 
 - [EIP-2565](https://eips.ethereum.org/EIPS/eip-2565): ModExp Gas Cost
-- [EIP-2315](https://eips.ethereum.org/EIPS/eip-2315): Simple Subroutines for
-  the EVM
 - [EIP-2929](https://eips.ethereum.org/EIPS/eip-2929): Gas cost increases for
   state access opcodes
 - [EIP-2718](https://eips.ethereum.org/EIPS/eip-2718): Typed Transaction
