--- a/_specs/ecip-1103.md
+++ b/_specs/ecip-1103.md
@@ -32,9 +32,9 @@ changes for Ethereum Classic's _Berlin_ upgrade include:
 This document proposes the following blocks at which to implement these changes
 in the Classic networks:
 
-- `4_008_693` on Mordor Classic PoW-testnet (June 9th, 2021)
-- `4_459_047` on Kotti Classic PoA-testnet (June 23rd, 2021)
-- `13_192_679` on Ethereum Classic PoW-mainnet (July 21st, 2021)
+- `3_985_893` on Mordor Classic PoW-testnet (June 2nd, 2021)
+- `4_368_634` on Kotti Classic PoA-testnet (June 9th, 2021)
+- `13_189_133` on Ethereum Classic PoW-mainnet (July 21st, 2021)
 
 For more information on the opcodes and their respective EIPs and
 implementations, please see the _Specification_ section of this document.
