--- a/_specs/ecip-1103.md
+++ b/_specs/ecip-1103.md
@@ -2,7 +2,8 @@
 lang: en
 ecip: 1103
 title: Magneto EVM and Protocol Upgrades
-status: Draft
+status: Last Call
+review-period-end: 2021-06-04
 type: Meta
 author: Afr Schoe (@q9f)
 created: 2021-02-09
