ECIP 1103: propose timeline (#425)
* 1103: propose timeline

ref #412 #424

* update block numbers

* move to last call

--- a/_specs/ecip-1103.md
+++ b/_specs/ecip-1103.md
@@ -2,7 +2,8 @@
 lang: en
 ecip: 1103
 title: Magneto EVM and Protocol Upgrades
-status: Draft
+status: Last Call
+review-period-end: 2021-06-04
 type: Meta
 author: Afr Schoe (@q9f)
 created: 2021-02-09
@@ -32,9 +33,9 @@ changes for Ethereum Classic's _Berlin_ upgrade include:
 This document proposes the following blocks at which to implement these changes
 in the Classic networks:
 
-- `TBD` on Mordor Classic PoW-testnet (TBD)
-- `TBD` on Kotti Classic PoA-testnet (TBD)
-- `TBD` on Ethereum Classic PoW-mainnet (TBD)
+- `3_985_893` on Mordor Classic PoW-testnet (June 2nd, 2021)
+- `4_368_634` on Kotti Classic PoA-testnet (June 9th, 2021)
+- `13_189_133` on Ethereum Classic PoW-mainnet (July 21st, 2021)
 
 For more information on the opcodes and their respective EIPs and
 implementations, please see the _Specification_ section of this document.
