ecip-1103: bump status to accepted (#428)
* ecip-1103: bump status to accepted

Signed-off-by: meows <b5c6@protonmail.com>

* remove `review-period-end` field

Co-authored-by: Afr Schoe <58883403+q9f@users.noreply.github.com>

--- a/_specs/ecip-1103.md
+++ b/_specs/ecip-1103.md
@@ -2,8 +2,7 @@
 lang: en
 ecip: 1103
 title: Magneto EVM and Protocol Upgrades
-status: Last Call
-review-period-end: 2021-06-04
+status: Accepted
 type: Meta
 author: Afr Schoe (@q9f)
 created: 2021-02-09
