move 1103 to final (mainnet)

--- a/_specs/ecip-1103.md
+++ b/_specs/ecip-1103.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1103
 title: Magneto EVM and Protocol Upgrades
-status: Accepted
+status: Final
 type: Meta
 author: Afr Schoe (@q9f)
 created: 2021-02-09
