use number ECIP-1105
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1105.md
+++ b/_specs/ecip-1105.md
@@ -1,5 +1,5 @@
 ---
-ecip: TBD
+ecip: 1105
 title: Restricted Chain Context Type Transactions
 author: Isaac (@meowsbits)
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/422
