--- a/_specs/ecip-1104.md
+++ b/_specs/ecip-1104.md
@@ -6,7 +6,7 @@ status: Draft
 type: Meta
 author: Cody Burns (@dontpanicburns)
 created: 2021-07-28
-discussions-to: https://github.com/ethereumclassic/ECIPs/issues/432
+discussions-to: https://github.com/ethereumclassic/ECIPs/discussions/440
 ---
 
 ### Simple Summary
@@ -32,15 +32,20 @@ EIP | Eth PR | omit or include
 The fee market change and bomb delay are omitted at this time as they are not applicable for Ethereum Classic. The fee market change puts the network at longterm risk since as ETC currently has a capped supply and fixed emmision epocs. The bomb was disarmed in ETC code base in a previous hardfork. 
 
 
-#### EIP Summaries
+#### EIP Summaries and expected action
 ##### Included
-- EIP 3198 "BASEFEE opcode": Adds an opcode that gives the EVM access to the block’s base fee.
+- EIP 3198 "BASEFEE opcode": Adds an opcode that gives the EVM access to the block’s base fee. 
+  - For ETC, BASEFEE opcode shall return `0`. This opcode is being added to ensure alignement with evm standards but will not be used on chain. The assumption being that contracts using `BASEFEE` sould do `GASPRICE - BASEFEE` to get the proper value   
 - EIP 3529 "Alternative refund reduction" Remove gas refunds for SELFDESTRUCT, and reduce gas refunds for SSTORE to a lower level where the refunds are still substantial, but they are no longer high enough for current “exploits” of the refund mechanism to be viable.
+  - gas price should be adjusted on respective opcodes to reflect the new EVM standard   
 - EIP 3541 "Reject new contracts starting with the 0xEF byte": Disallow new code starting with the 0xEF byte to be deployed. Code already existing in the account trie starting with 0xEF byte is not affected semantically by this change.
+  - No future contracts shall be deployed on chain with `0xEF` prefix. Clients should respond with an error message citing ECIP 1104 as justification of rejection. 
 
 ##### Omitted
 - EIP 1559 "Fee market change": A transaction pricing mechanism that includes fixed-per-block network fee that is burned and dynamically expands/contracts block sizes to deal with transient congestion.
+  - Undesirable to implement at this time as it would conflict with the current monetary policy set in ECIP-1017  
 - EIP 3228 "💣 delay": Delays the difficulty bomb to show effect the first week of December 2021.
+  - Not applicable to ETC due to difficulty bomb being defused 
 
 
 This document proposes the following blocks at which to implement these changes
@@ -101,6 +106,18 @@ features currently and will be able to support the _Mystique_ upgrade:
 
 - Core-Geth (maintained by ETC Core)
 - Hyperledger Besu (maintained by ConsenSys)
+- Mantis (maintained by IOHK)
+
+### Proposed Timeline
+
+- make sure draft will be ready and "pre-approved" by the core teams
+have some rough consensus to put it in last call ("day X")
+- day X + 2 weeks - move to accepted unless there are issues/concerns
+- day X +4 weeks - Mordor activation
+- day X +6 weels - Kotti activation
+- day X +12 weeks - Mainnet activation
+
+Meeting to set day X will be held the week of August 23rd 2021
 
 ## Copyright
 
