Update ECIP-1098 status to withdrawn

--- a/_specs/ecip-1098.md
+++ b/_specs/ecip-1098.md
@@ -4,7 +4,7 @@ title: Proto Treasury System
 lang: en
 author: Julian Mendiola (@jmendiola222), Nicolas Tallar(@ntallar), Brian McKenna(@bpmckenna)
 discussions-to: https://github.com/input-output-hk/ECIPs/issues/2
-status: Draft
+status: Withdrawn
 type: Standards Track
 category: Core
 created: 2020-08-26
