Update ECIP-1097 to Withdrawn status

--- a/_specs/ecip-1097.md
+++ b/_specs/ecip-1097.md
@@ -4,7 +4,7 @@ title: Checkpointing based 51% attack resistance
 lang: en
 author: Dimitris Karakostas (@dimkarakostas), Radek Tkaczyk (@rtkaczyk), Romain Pellerin (@romainPellerin), Brian McKenna (@bpmckenna)
 discussions-to: https://github.com/input-output-hk/ECIPs/issues/1
-status: Draft
+status: Withdrawn
 type: Standards Track
 category: Core
 created: 2020-08-26
