--- a/_specs/ecip-1104.md
+++ b/_specs/ecip-1104.md
@@ -51,9 +51,9 @@ The fee market change and bomb delay are omitted at this time as they are not ap
 This document proposes the following blocks at which to implement these changes
 in the Classic networks:
 
-- `TBD` on Mordor Classic PoW-testnet 
-- `TBD` on Kotti Classic PoA-testnet 
-- `TBD` on Ethereum Classic PoW-mainnet 
+- `Dec 15th 2022` on Mordor Classic PoW-testnet 
+- `Jan 5th 2022` on Kotti Classic PoA-testnet 
+- `Jan 19th 2022` on Ethereum Classic PoW-mainnet 
 
 For more information on the opcodes and their respective EIPs and
 implementations, please see the _Specification_ section of this document.
@@ -106,18 +106,16 @@ features currently and will be able to support the _Mystique_ upgrade:
 
 - Core-Geth (maintained by ETC Core)
 - Hyperledger Besu (maintained by ConsenSys)
-- Mantis (maintained by IOHK)
 
 ### Proposed Timeline
 
 - make sure draft will be ready and "pre-approved" by the core teams
 have some rough consensus to put it in last call ("day X")
-- day X + 2 weeks - move to accepted unless there are issues/concerns
-- day X +4 weeks - Mordor activation
-- day X +6 weels - Kotti activation
-- day X +12 weeks - Mainnet activation
+- Nov 23 + 2 weeks - move to accepted unless there are issues/concerns
+- Dec 15th - Mordor activation
+- Jan 5th - Kotti activation
+- Jan 26th - Mainnet activation
 
-Meeting to set day X will be held the week of August 23rd 2021
 
 ## Copyright
 
