Omit EIP-3198: BASEFEE opcode

--- a/_specs/ecip-1104.md
+++ b/_specs/ecip-1104.md
@@ -23,10 +23,10 @@ changes for Ethereum Classic's _London_ upgrade include:
 
 EIP | Eth PR | omit or include
 -- | -- | --
-3198 (BASEFEE opcode) | #22837 | Include
 3529 (Alternative refund reduction) | #22733 | Include
 3541 (Reject new contracts starting with the 0xEF byte) | #22809 | Include
 1559 (Fee market change) | #22837 #22896 |  Omit
+3198 (BASEFEE opcode) | #22837 | Omit
 3228 (💣 delay) | #22840 and #22870 | Omit
 
 The fee market change and bomb delay are omitted at this time as they are not applicable for Ethereum Classic. The fee market change puts the network at longterm risk since as ETC currently has a capped supply and fixed emmision epocs. The bomb was disarmed in ETC code base in a previous hardfork. 
@@ -34,8 +34,6 @@ The fee market change and bomb delay are omitted at this time as they are not ap
 
 #### EIP Summaries and expected action
 ##### Included
-- EIP 3198 "BASEFEE opcode": Adds an opcode that gives the EVM access to the block’s base fee. 
-  - For ETC, BASEFEE opcode shall return `0`. This opcode is being added to ensure alignment with evm standards but will not be used on chain. The assumption being that contracts using `BASEFEE` sould do `GASPRICE - BASEFEE` to get the proper value   
 - EIP 3529 "Alternative refund reduction" Remove gas refunds for SELFDESTRUCT, and reduce gas refunds for SSTORE to a lower level where the refunds are still substantial, but they are no longer high enough for current “exploits” of the refund mechanism to be viable.
   - gas price should be adjusted on respective opcodes to reflect the new EVM standard   
 - EIP 3541 "Reject new contracts starting with the 0xEF byte": Disallow new code starting with the 0xEF byte to be deployed. Code already existing in the account trie starting with 0xEF byte is not affected semantically by this change.
@@ -44,6 +42,8 @@ The fee market change and bomb delay are omitted at this time as they are not ap
 ##### Omitted
 - EIP 1559 "Fee market change": A transaction pricing mechanism that includes fixed-per-block network fee that is burned and dynamically expands/contracts block sizes to deal with transient congestion.
   - Undesirable to implement at this time as it would conflict with the current monetary policy set in ECIP-1017  
+- EIP 3198 "BASEFEE opcode": Adds an opcode that gives the EVM access to the block’s base fee. 
+  - It depends on EIP-1559 and it wouldn't make sense in the context of ETC
 - EIP 3228 "💣 delay": Delays the difficulty bomb to show effect the first week of December 2021.
   - Not applicable to ETC due to difficulty bomb being defused 
 
