Propose activation block numbers

--- a/_specs/ecip-1104.md
+++ b/_specs/ecip-1104.md
@@ -51,9 +51,9 @@ The fee market change and bomb delay are omitted at this time as they are not ap
 This document proposes the following blocks at which to implement these changes
 in the Classic networks:
 
-- `Dec 15th 2022` on Mordor Classic PoW-testnet 
-- `Jan 5th 2022` on Kotti Classic PoA-testnet 
-- `Jan 19th 2022` on Ethereum Classic PoW-mainnet 
+- `5_414_000` on Mordor Classic PoW-testnet (Jan 10th 2022)
+- `5_559_000` on Kotti Classic PoA-testnet (Jan 20th 2022)
+- `14_502_000` on Ethereum Classic PoW-mainnet (Feb 10th 2022)
 
 For more information on the opcodes and their respective EIPs and
 implementations, please see the _Specification_ section of this document.
