--- a/_specs/ecip-1104.md
+++ b/_specs/ecip-1104.md
@@ -35,7 +35,7 @@ The fee market change and bomb delay are omitted at this time as they are not ap
 #### EIP Summaries and expected action
 ##### Included
 - EIP 3198 "BASEFEE opcode": Adds an opcode that gives the EVM access to the block’s base fee. 
-  - For ETC, BASEFEE opcode shall return `0`. This opcode is being added to ensure alignement with evm standards but will not be used on chain. The assumption being that contracts using `BASEFEE` sould do `GASPRICE - BASEFEE` to get the proper value   
+  - For ETC, BASEFEE opcode shall return `0`. This opcode is being added to ensure alignment with evm standards but will not be used on chain. The assumption being that contracts using `BASEFEE` sould do `GASPRICE - BASEFEE` to get the proper value   
 - EIP 3529 "Alternative refund reduction" Remove gas refunds for SELFDESTRUCT, and reduce gas refunds for SSTORE to a lower level where the refunds are still substantial, but they are no longer high enough for current “exploits” of the refund mechanism to be viable.
   - gas price should be adjusted on respective opcodes to reflect the new EVM standard   
 - EIP 3541 "Reject new contracts starting with the 0xEF byte": Disallow new code starting with the 0xEF byte to be deployed. Code already existing in the account trie starting with 0xEF byte is not affected semantically by this change.
