fix: this fixes #453

--- a/_specs/ECIP-0001.md
+++ b/_specs/ECIP-0001.md
@@ -79,11 +79,11 @@ A good reason to transfer ownership is because the original author no longer has
 
 The current ECIP editors are:
 
+* Antoine Toulme (@atoulme)
 * Mr. Meows D. Bits (@meowsbits)
-* Cody Burns (@realcodywburns)
+* gitr0n1n (@gitr0n1n)
+* Istora Mandiri (@IstoraMandiri)
 * Talha Cross (@soc1c)
-* Yaz Khoury (@YazzyYaz)
-* Zachary Belford (@BelfordZ)
 
 ## ECIP Editor Responsibilities & Workflow
 
