--- a/_specs/ecip-1092.md
+++ b/_specs/ecip-1092.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1092
 title: 51-percent attack solution PirlGuard by Callisto
-status: Draft
+status: Withdrawn
 type: Standards Track
 category: Core
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/327
