--- a/_specs/ecip-1094.md
+++ b/_specs/ecip-1094.md
@@ -3,7 +3,7 @@ lang: en
 ecip: 1094
 title: VeriBlock Proof-of-Proof 51%-Attack Prevention
 category: Core
-status: Draft
+status: Withdrawn
 type: Standards Track
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/360
 author: Max Sanchez (@max-sanchez)
