--- a/_specs/ecip-1096.md
+++ b/_specs/ecip-1096.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1096
 title: 51% Attack protection system based on Bitcoin Merged Mining
-status: Draft
+status: Withdrawn
 type: Standards Track
 category: Core
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/343
