fix: restored ecip0001 made editor change in ecip1000

--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -72,18 +72,20 @@ A good reason to transfer ownership is because the original author no longer has
 
 Current ECIP editors:
 
+* Antoine Toulme (@atoulme)
+* gitr0n1n (@gitr0n1n)
+* Istora Mandiri (@IstoraMandiri)
 * Mr. Meows D. Bits (@meowsbits)
 * Talha Cross (@soc1c)
-* Zachary Belford (@BelfordZ)
-* Felipe Faraggi (@faraggi)
-* r0n1n (@gitr0n1n)
-* Stevan Lohja (@stevanlohja)
-
 
 Former ECIP editors:
+
 * Wei Tang (@sorpaas)
 * Yaz Khoury (@YazzyYaz)
 * Cody Burns (@realcodywburns)
+* Stevan Lohja (@stevanlohja)
+* Zachary Belford (@BelfordZ)
+* Felipe Faraggi (@faraggi)
 
 ## ECIP Editor Responsibilities & Workflow
 
