--- a/_specs/ecip-1104.md
+++ b/_specs/ecip-1104.md
@@ -43,7 +43,7 @@ The fee market change and bomb delay are omitted at this time as they are not ap
 - EIP 1559 "Fee market change": A transaction pricing mechanism that includes fixed-per-block network fee that is burned and dynamically expands/contracts block sizes to deal with transient congestion.
   - Undesirable to implement at this time as it would conflict with the current monetary policy set in ECIP-1017  
 - EIP 3198 "BASEFEE opcode": Adds an opcode that gives the EVM access to the block’s base fee. 
-  - It depends on EIP-1559 and it wouldn't make sense in the context of ETC
+  - It depends on EIP-1559. Behavior specifications for use in context without EIP-1559 are undefined.
 - EIP 3228 "💣 delay": Delays the difficulty bomb to show effect the first week of December 2021.
   - Not applicable to ETC due to difficulty bomb being defused 
 
