Editorial: Fix/ecip 1049 (#466)
* _specs: add Apache-2.0 license

Date: 2022-02-21 09:27:59-08:00
Signed-off-by: meows <b5c6@protonmail.com>

* _specs: add placeholder specification

Date: 2022-02-21 09:33:16-08:00
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1049.md
+++ b/_specs/ecip-1049.md
@@ -8,6 +8,7 @@ category: Core
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/394
 author: Bob Summerwill <bob@etccooperative.org>, Alexander Tsankov <alexander.tsankov@colorado.edu>
 created: 2019-01-08
+license: Apache-2.0
 ---
 
 ### Abstract
@@ -40,6 +41,10 @@ In Solidity, developers have access to the `keccak256()` function, which allows 
 0xBitcoin is a security-audited [5] dapp that allows users to submit a proof of work hash directly to a smart contract running on the Ethereum blockchain. If the sent hash matches the given requirements, a token reward is trustlessly dispensed to the sender, along with the contract reevaluating difficulty parameters. This project has run successfully for over 10 months, and has minted over 3 million tokens [6].
 
 With the direction that Ethereum Classic is taking: a focus on Layer-2 solutions and cross-chain compatibility; being able to evaluate proof of work on chain, will be tremendously valuable to developers of both smart-contracts and node software writers. This could greatly simplify interoperability. 
+
+### Specification
+
+Use Keccak256 with no DAG instead of ~~Ethash~~ Etchash as the proof-of-work mechanism on Ethereum Classic.
 
 ### Implementation
 
