--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -72,10 +72,10 @@ A good reason to transfer ownership is because the original author no longer has
 
 Current ECIP editors:
 
-* Antoine Toulme (@atoulme)
-* gitr0n1n (@gitr0n1n)
-* Istora Mandiri (@IstoraMandiri)
-* Mr. Meows D. Bits (@meowsbits)
+* Antoine Toulme (@atoulme) ETC Cooperative Staff
+* gitr0n1n (@gitr0n1n) Independent
+* Istora Mandiri (@IstoraMandiri) Independent
+* Mr. Meows D. Bits (@meowsbits) ETC Cooperative Staff
 
 Former ECIP editors:
 
