--- a/_specs/ecip-1066.md
+++ b/_specs/ecip-1066.md
@@ -4,7 +4,7 @@ ecip: 1066
 title: Ethereum Classic Network Description
 status: Active
 type: Meta
-author: Wei Tang (@sorpaas)
+author: r0n1n (@gitr0n1n), Wei Tang (@sorpaas)
 created: 2019-10-07
 ---
 
