--- a/_specs/ecip-1089.md
+++ b/_specs/ecip-1089.md
@@ -4,7 +4,7 @@ ecip: 1089
 title: Phoenix EVM and Protocol Upgrades (Classic Option)
 status: Withdrawn
 type: Meta
-author: /raw PONG _GHMoaCXLT (@q9f)
+author: Afr Schoe (@q9f)
 created: 2020-02-24
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/262
 ---
