--- a/_specs/ecip-1088.md
+++ b/_specs/ecip-1088.md
@@ -4,7 +4,7 @@ ecip: 1088
 title: Phoenix EVM and Protocol Upgrades
 status: Final
 type: Meta
-author: /raw PONG _GHMoaCXLT (@q9f)
+author: Afr Schoe (@q9f)
 created: 2020-02-24
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/262
 ---
