Cody Burns (@dontpanicburns)
Update Author link through ECIP docs

--- a/_specs/ecip-1013.md
+++ b/_specs/ecip-1013.md
@@ -5,7 +5,7 @@ title: ETC On-Chain Cryptographic Signing and Authentication Protocol
 status: Draft
 type: Standards Track
 category: ECBP
-author: Cody W Burns <cody.w.burns@ethereumclassic.org>
+author: Cody Burns (@dontpanicburns)
 created: 2016-10-10
 ---
 
