--- a/_specs/ecip-1015.md
+++ b/_specs/ecip-1015.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1015
 title: Long-term gas cost changes for IO-heavy operations to mitigate transaction spam attacks
-author: Cody W Burns <cody.w.burns@ethereumclassic.org>
+author: Cody Burns (@dontpanicburns)
 status: Final
 type: Standards Track
 category: Core
@@ -48,4 +48,3 @@ created: 2016-10-25
 
 This work is licensed under [Apache License, Version
 2.0](http://www.apache.org/licenses/).
-
