--- a/_specs/ecip-1016.md
+++ b/_specs/ecip-1016.md
@@ -4,7 +4,7 @@ ecip: 1016
 title: ETC Improvement Proposal Management
 status: Withdrawn
 type: Meta
-author: Cody W Burns <Cody.w.burns@ethereumclassic.com>
+author: Cody Burns (@dontpanicburns)
 created: 2016-10-25
 ---
 
