--- a/_specs/ecip-1037.md
+++ b/_specs/ecip-1037.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1037
 title: Simple Interactive URI Scheme
-author: Cody Burns <dontpanic@codywburns.com>
+author: Cody Burns (@dontpanicburns)
 status: Draft
 type: Standards Track
 category: Interface
