--- a/_specs/ecip-1051.md
+++ b/_specs/ecip-1051.md
@@ -5,7 +5,7 @@ title: Ethereum Classic Treasury system
 status: Rejected
 type: Standards Track
 category: Core
-author: Dexaran (@dexaran)
+author: Dexaran (@Dexaran)
 created: 2018-12-31
 ---
 
@@ -50,4 +50,3 @@ The proposed treasury system relies on two system addresses that receive funding
 - `(base block reward - (X + Y))` goes to miner's address.
 
 This is possible to implement the described scheme without changing the `base block reward`, thus keeping the original 5M20 Ethereum Classic monetary policy unaffected.
-
