--- a/_specs/ecip-1057.md
+++ b/_specs/ecip-1057.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1057
 title: Cold Staking
-author: Dexaran (@dexaran)
+author: Dexaran (@Dexaran)
 discussions-To: https://github.com/ethereumclassic/ECIPs/issues/65
 status: Rejected
 type: Standards Track
@@ -103,4 +103,3 @@ This is the live Cold Staking contract at Callisto Network: [0xd813419749b3c2cDc
 Cold Staking UI is already implemented in [ClassicEtherWallet](http://classicetherwallet.com) (only visible when unlocking wallet with CLO network nodes selected).
 
 Cold Staking is supported by [Guarda wallet](https://www.reddit.com/r/CallistoCrypto/comments/9z2tmt/callisto_cold_staking_is_now_active_on_guarda/), [Trust wallet](https://trustwallet.com/assets/callisto) and some other wallets.
-
