--- a/_specs/ecip-1052.md
+++ b/_specs/ecip-1052.md
@@ -4,7 +4,7 @@ ecip: 1052
 title: Smart-contract Security Auditing core
 status: Rejected
 type: Meta
-author: Dexaran <dexaran@ethereumclassic.org>
+author: Dexaran (@Dexaran)
 created: 2018-12-31
 ---
 
@@ -73,4 +73,3 @@ Security audits are completely free-of-charge for smart-contract developers, thu
 #### Requirements
 
 This requires [Treasury Proposal](https://github.com/ethereumclassic/ECIPs/issues/4) implementation.
-
