Wei Tang (@sorpaas)
Update Author links through ECIP docs

--- a/_specs/ecip-1025.md
+++ b/_specs/ecip-1025.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1025
 title: Precompiled Contracts for zkSNARK Verification
-author: Wei Tang <hi@that.world>
+author: Wei Tang (@sorpaas)
 status: Draft
 type: Standards Track
 category: Core
