--- a/_specs/ecip-1026.md
+++ b/_specs/ecip-1026.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1026
 title: Modexp Precompiled Contract
-author: Wei Tang <hi@that.world>
+author: Wei Tang (@sorpaas)
 status: Draft
 type: Standards Track
 category: Core
