--- a/_specs/ecip-1036.md
+++ b/_specs/ecip-1036.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1036
 title: Fallback Complete Difficulty Bomb Diffusion
-author: Wei Tang <hi@that.world>
+author: Wei Tang (@sorpaas)
 status: Draft
 type: Standards Track
 category: Core
