--- a/_specs/ecip-1065.md
+++ b/_specs/ecip-1065.md
@@ -4,7 +4,7 @@ ecip: 1065
 title: Kunming EVM and Protocol Upgrades
 status: Draft
 type: Meta
-author: Wei Tang <hi@that.world>
+author: Wei Tang (@sorpaas)
 created: 2019-10-05
 ---
 
