Mr. Meows D. Bits (@meowsbits)
Update author links through ECIP docs

--- a/_specs/ecip-1045.md
+++ b/_specs/ecip-1045.md
@@ -4,7 +4,7 @@ ecip: 1045
 title: Support for ETH Byzantium & Constantinople EVM and Protocol Upgrades
 status: Superseded
 type: Meta
-author: Isaac Ardis <isaac@etcdevteam.com>
+author: Mr. Meows D. Bits (@meowsbits)
 created: 2018-06-18
 ---
 
@@ -96,7 +96,3 @@ These changes are _expected_ to be implemented by the anticipated Constantinople
 - EIP-1052 (https://github.com/ethereum/EIPs/pull/1052): `EXTCODEHASH` opcode
 
 > Returns the keccak256 hash of a contract's code
-
-
-
-
