--- a/_specs/ecip-1054.md
+++ b/_specs/ecip-1054.md
@@ -4,7 +4,7 @@ ecip: 1054
 title: Atlantis EVM and Protocol Upgrades
 status: Final
 type: Meta
-author: Isaac Ardis <isaac.a@etclabs.org>
+author: Mr. Meows D. Bits (@meowsbits)
 created: 2019-02-11
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/67
 ---
