--- a/_specs/ecip-1056.md
+++ b/_specs/ecip-1056.md
@@ -4,7 +4,7 @@ ecip: 1056
 title: Agharta EVM and Protocol Upgrades
 status: Final
 type: Meta
-author: Isaac Ardis <isaac.a@etclabs.org>, Wei Tang (@sorpaas)
+author: Mr. Meows D. Bits (@meowsbits), Wei Tang (@sorpaas)
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/131
 created: 2019-03-25
 ---
