--- a/_specs/ecip-1100.md
+++ b/_specs/ecip-1100.md
@@ -2,7 +2,7 @@
 ecip: 1100
 title: MESS (Modified Exponential Subjective Scoring)
 lang: en
-author: Isaac <b5c6@protonmail.com>
+author: Mr. Meows D. Bits (@meowsbits)
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/374
 status: Active
 type: Standards Track
