--- a/_specs/ecip-1105.md
+++ b/_specs/ecip-1105.md
@@ -1,7 +1,7 @@
 ---
 ecip: 1105
 title: Restricted Chain Context Type Transactions
-author: Isaac (@meowsbits)
+author: Mr. Meows D. Bits (@meowsbits)
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/422
 status: Draft
 type: Standards Track
