--- a/_specs/ecip-1106.md
+++ b/_specs/ecip-1106.md
@@ -2,7 +2,7 @@
 ecip: 1106
 title: Endorser Transactions
 lang: en
-author: Isaac (@meowsbits)
+author: Mr. Meows D. Bits (@meowsbits)
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/423
 status: Draft
 type: Informational
