Igor Artamonov (@splix)
Update author links through ECIP docs

--- a/_specs/ecip-1010.md
+++ b/_specs/ecip-1010.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1010
 title: Delay Difficulty Bomb Explosion
-author: Igor Artamonov <splix@ethereumclassic.org>
+author: Igor Artamonov (@splix)
 status: Final
 type: Standards Track
 category: Core
