--- a/_specs/ecip-1027.md
+++ b/_specs/ecip-1027.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1027
 title: Scaling ETC with Sidechains
-author: Igor Artamonov <splix@etcdevteam.com>
+author: Igor Artamonov (@splix)
 status: Draft
 type: Standards Track
 category: Interface
