--- a/_specs/ecip-1039.md
+++ b/_specs/ecip-1039.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1039
 title: Monetary policy rounding specification
-author: Isaac Ardis <isaac@etcdevteam.com>
+author: Mr. Meows D. Bits (@meowsbits)
 status: Final
 type: Standards Track
 category: Core
@@ -647,6 +647,3 @@ winner reward calculation.
 | 198 | 0 | 0 |
 | 199 | 0 | 0 |
 | 200 | 0 | 0 |
-
-
-
