--- a/_specs/ecip-1041.md
+++ b/_specs/ecip-1041.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1041
 title: Remove Difficulty Bomb
-author: Igor Artamonov <splix@etcdevteam.com>
+author: Igor Artamonov (@splix)
 status: Final
 type: Standards Track
 category: Core
@@ -57,4 +57,3 @@ For most of peer implementations it’s a trivial modification and can be done t
 ## References
 - ECIP-1010 Delay Difficulty Bomb Explosion - https://ecips.ethereumclassic.org/ECIPs/eip-1010
 - EIP-2 Homestead Hard-fork Changes - https://eips.ethereum.org/EIPS/eip-2
-
