--- a/_specs/ecip-1042.md
+++ b/_specs/ecip-1042.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1042
 title: GASPAY opcode
-author: Igor Artamonov <splix@etcdevteam.com>
+author: Igor Artamonov (@splix)
 status: Draft
 type: Standards Track
 category: Core
