--- a/_specs/ecip-1028.md
+++ b/_specs/ecip-1028.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1028
 title: Private Sidechain checkpoints
-author: Igor Artamonov <splix@etcdevteam.com>
+author: Igor Artamonov (@splix)
 status: Draft
 type: Standards Track
 category: Interface
