Talha Cross (@soc1c)
Update links through ECIP docs

--- a/_specs/ecip-1086.md
+++ b/_specs/ecip-1086.md
@@ -5,7 +5,7 @@ title: SLOAD Gas Patch for the Classic Testnets
 status: Rejected
 type: Standards Track
 category: Core
-author: Talha Cross <no-reply@soc1.cz>
+author: Talha Cross (@soc1c)
 created: 2020-02-18
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/262
 ---
