Bob Summerwill (@bobsummerwill)
Update link in ECIP docs

--- a/_specs/ecip-1049.md
+++ b/_specs/ecip-1049.md
@@ -6,7 +6,7 @@ status: Draft
 type: Standards Track
 category: Core
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/394
-author: Bob Summerwill <bob@etccooperative.org>, Alexander Tsankov <alexander.tsankov@colorado.edu>
+author: Bob Summerwill (@bobsummerwill), Alexander Tsankov (@antsankov)
 created: 2019-01-08
 license: Apache-2.0
 ---
