--- a/_specs/ecip-1082.md
+++ b/_specs/ecip-1082.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1082
 title: Fork identifier (`forkid`) protocol fork list specification
-author: github.com/meowsbits
+author: Mr. Meows D. Bits (@meowsbits)
 status: Superseded
 superseded-by: 1091
 type: Standards Track
@@ -156,4 +156,3 @@ The Ethereum Classic disinflationary monetary policy is not considered a series 
 ### Implementation
 
 Respective reference implementations for `forkid` generation are documented in EIP-2124 and EIP-2364.
-
