Yaz Khoury (@YazzyYaz)
Update Author links in ECIP docs

--- a/_specs/ecip-1070.md
+++ b/_specs/ecip-1070.md
@@ -2,7 +2,7 @@
 ecip: 1070
 lang: en
 title: ProgPoW, a Programmatic Proof-of-Work, for Ethereum Classic
-author: Yaz Khoury <yaz@etccooperative.org>
+author: Yaz Khoury (@YazzyYaz)
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/172
 status: Rejected
 type: Standards Track
