Authors Fix Links
Fix Links of author in ECIP docs

--- a/_specs/ecip-1085.md
+++ b/_specs/ecip-1085.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1085
 title: Simple Subroutines for the EVM
-author: Greg Colvin (@gcolvin) and Bob Summerwill (@bobsummerwill)
+author: Greg Colvin (@gcolvin), Bob Summerwill (@bobsummerwill)
 status: Draft
 type: Standards Track
 category: Core
