--- a/_specs/ecip-1096.md
+++ b/_specs/ecip-1096.md
@@ -6,7 +6,7 @@ status: Withdrawn
 type: Standards Track
 category: Core
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/343
-author: Sergio Lerner (@SergioDemianLerner) and Martin Medina (@martinmedina) 
+author: Sergio Lerner (@SergioDemianLerner), Martin Medina (@martinmedina) 
 created: 2020-08-22
 ---
 
@@ -164,5 +164,3 @@ However, here we present some possibilities:
 ## Copyright/Licensing
 
 [GNU Lesser General Public License v3.0](https://www.gnu.org/licenses/lgpl-3.0.en.html).
-
-
