--- a/_specs/ecip-1083.md
+++ b/_specs/ecip-1083.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1083
 title: Remove Contract Size Limit
-author: Zachary Belford <@BelfordZ>, Mudit Gupta <@maxsam4>
+author: Zachary Belford (@BelfordZ), Mudit Gupta (@maxsam4)
 discussions-to: https://github.com/ethereum/EIPs/issues/1662
 status: Draft
 type: Standards Track
