Cody Burns (@realcodywburns)
fix, wrong handle

--- a/_specs/ecip-1013.md
+++ b/_specs/ecip-1013.md
@@ -5,7 +5,7 @@ title: ETC On-Chain Cryptographic Signing and Authentication Protocol
 status: Draft
 type: Standards Track
 category: ECBP
-author: Cody Burns (@dontpanicburns)
+author: Cody Burns (@realcodywburns)
 created: 2016-10-10
 ---
 
