--- a/_specs/ecip-1015.md
+++ b/_specs/ecip-1015.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1015
 title: Long-term gas cost changes for IO-heavy operations to mitigate transaction spam attacks
-author: Cody Burns (@dontpanicburns)
+author: Cody Burns (@realcodywburns)
 status: Final
 type: Standards Track
 category: Core
