--- a/_specs/ecip-1035.md
+++ b/_specs/ecip-1035.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1035
 title: Ethereum Classic Privacy Enhanced Stealth Address Schema
-author: Cody Burns (@dontpanicburns)
+author: Cody Burns (@realcodywburns)
 status: Draft
 type: Standards Track
 category: Interface
