--- a/_specs/ecip-1043.md
+++ b/_specs/ecip-1043.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1043
 title: Fixed DAG limit restriction 
-author: Cody Burns (@dontpanicburns), Wolf Spraul <wolf@linzhi.io>
+author: Cody Burns (@realcodywburns), Wolf Spraul (@wpwrak)
 status: Superseded
 type: Standards Track
 category: Core
