--- a/_specs/ecip-1104.md
+++ b/_specs/ecip-1104.md
@@ -4,7 +4,7 @@ ecip: 1104
 title:  Mystique EVM and Protocol Upgrades
 status: Accepted
 type: Meta
-author: Cody Burns (@dontpanicburns)
+author: Cody Burns (@realcodywburns)
 created: 2021-07-28
 discussions-to: https://github.com/ethereumclassic/ECIPs/discussions/440
 ---
