author and title
Updated author format for links
Update title to more accurately reflect proposal
Updated date to ECIP number assignment date

--- a/_specs/ecip-1107.md
+++ b/_specs/ecip-1107.md
@@ -1,14 +1,14 @@
 ---
 ecip: 1107
-title: Flexible PoW Mainnet fork
+title: Proof of Work Transition Process Testing
 lang: en
 translator: 
-author: Antoine Toulme @atoulme
+author: Antoine Toulme (@atoulme)
 discussions-to: https://github.com/ethereumclassic/ECIPs/discussions/444
 status: WIP
 type: Informational
 category: 
-created: 2021-08-29
+created: 2022-02-27
 replaces: 
 superseded-by: 
 resolution: 
