ethash to etchash
update algo

--- a/_specs/ecip-1107.md
+++ b/_specs/ecip-1107.md
@@ -24,7 +24,7 @@ We are looking to create a situation where we transition across proof of work al
 We want to select a block of ETC mainnet and take all account information, sent to a separate network.
 The network must have a different chain id.
 The network must allow to change the proof of work algorithm in use.
-It should be possible to change the proof of work algorithm back and forth between ethash and keccak.
+It should be possible to change the proof of work algorithm back and forth between etchash and keccak.
 TBD whether the change should be cyclical or on demand.
 
 ### Rationale
