Add github handles for authors
Add github handles for authors

--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -150,10 +150,11 @@ Each ECIP must begin with an RFC 822 style header preamble. The headers must app
 
 The `Layer` header (only for Standards Track ECIPs) documents which layer of Ethereum Classic the ECIP applies to.
 
-The `Author` header lists the names and email addresses of all the authors/owners of the ECIP.
+The `Author` header lists the names and email addresses/GitHub handles of all the authors/owners of the ECIP.
 The format of the Author header value must be:
 
 	Random J. User <123@dom.ain>
+	Random J. User (@random.j.user)
 
 If there are multiple authors, each should be on a separate line following RFC 2822 continuation line conventions.
 
