Add missing sections as placeholders
Add missing sections as placeholders

--- a/_specs/ecip-1107.md
+++ b/_specs/ecip-1107.md
@@ -31,7 +31,10 @@ TBD whether the change should be cyclical or on demand.
 We want to make sure we can easily change between proof of work algorithms.
 In particular, we want to make sure we can adjust difficulty faster during the adjustment period of the algorithm.
 
-### Implementation
+### Backwards compatibility
+TBD
+
+### Reference implementation
 TBD
 
 ### Copyright/Licensing
