Add WIP to title
add WIP

--- a/_specs/ecip-1107.md
+++ b/_specs/ecip-1107.md
@@ -1,6 +1,6 @@
 ---
 ecip: 1107
-title: Proof of Work Transition Process Testing
+title: WIP - Proof of Work Transition Process Testing
 lang: en
 translator: 
 author: Antoine Toulme (@atoulme)
