Fix Formatting Errors
Fix Formatting Errors on author fields

--- a/_specs/ecip-1095.md
+++ b/_specs/ecip-1095.md
@@ -6,7 +6,7 @@ status: Rejected
 type: Standards Track
 category: Core
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/342
-author: Stevan Lohja (stevanio@protonmail.com)
+author: Stevan Lohja <stevanio@protonmail.com>
 created: 2020-08-20
 superseded-by: 1049
 ---
