--- a/_specs/ecip-1077.md
+++ b/_specs/ecip-1077.md
@@ -1,7 +1,7 @@
 ---
 ecip: 1077
 title: The Meta Fork ECIP: Establishing _Fork_ type ECIPs and their specifications and processes
-author: Mr. Meows D. Bits (@meowsbits)
+author: Mr. Meows D. Bits
 discussions-to: TBD
 status: Withdrawn
 type: Meta
