Add WIP Designation
+ Add WIP designation due to lack of ECIP-1000 compliance.
+ Add ECIP Editor Notes for sections not in compliance to ECIP-1000
+ Add reference link to CDC 22 Article.

--- a/_specs/ecip-1049.md
+++ b/_specs/ecip-1049.md
@@ -1,7 +1,7 @@
 ---
 lang: en
 ecip: 1049
-title: Change the ETC Proof of Work Algorithm to Keccak256
+title: WIP - Change the ETC Proof of Work Algorithm to Keccak256
 status: Draft
 type: Standards Track
 category: Core
@@ -14,12 +14,23 @@ license: Apache-2.0
 ### Abstract
 A proposal to replace the current Ethereum Classic proof of work algorithm Etchash with Keccak-256.
 
+### Copyright/Licensing
+Copyright under Apache 2.0 license.
+
+### Specification
+*ECIP Editor Note: Please Update to ECIP-1000 compliance.*
+
+Use Keccak256 with no DAG instead of ~~Ethash~~ as the proof-of-work mechanism on Ethereum Classic.
+
 ### Motivation
-* A response to the recent double-spend attacks against Ethereum Classic. Most of this hashpower was rented or came from other chains, specfically Ethereum (ETH). A seperate proof of work algorithm would encourage the development of a specialized Ethereum Classic mining community, and blunt the ability for attackers to purchase mercenary hash power on the open-market. 
+*ECIP Editor Note: Please Update to ECIP-1000 compliance.*
+
+* A response to the recent double-spend attacks against Ethereum Classic. Most of this hashpower was rented or came from other chains, specfically Ethereum (ETH). A seperate proof of work algorithm would encourage the development of a specialized Ethereum Classic mining community, and blunt the ability for attackers to purchase mercenary hash power on the open-market.
 
 * As a secondary benefit, deployed smart contracts and dapps running on chain are currently able to use `keccak256()` in their code. This ECIP could open the possibility of smart contracts being able to evaluate chain state, and simplify second layer (L2) development.
 
 ### Rationale
+*ECIP Editor Note: Please Update to ECIP-1000 compliance.*
 
 ### Reason 1: Similarity to Bitcoin
 The Bitcoin network currently uses the CPU-intensive SHA256 Algorithm to evaluate blocks. When Ethereum was deployed it used a different algorithm, Dagger-Hashimoto, which eventually became Ethash on 1.0 launch. Dagger-Hashimoto was explicitly designed to be memory-intensive with the goal of ASIC resistance [1]. It has been provably unsuccessful at this goal, with Ethash ASICs currently easily availalble on the market.
@@ -42,11 +53,13 @@ In Solidity, developers have access to the `keccak256()` function, which allows 
 
 With the direction that Ethereum Classic is taking: a focus on Layer-2 solutions and cross-chain compatibility; being able to evaluate proof of work on chain, will be tremendously valuable to developers of both smart-contracts and node software writers. This could greatly simplify interoperability. 
 
-### Specification
+### Backwards compatibility
+*ECIP Editor Note: Please Update to ECIP-1000 compliance.*
 
-Use Keccak256 with no DAG instead of ~~Ethash~~ Etchash as the proof-of-work mechanism on Ethereum Classic.
+Work in progress.
 
-### Implementation
+### Reference implementation
+*ECIP Editor Note: Please Update to ECIP-1000 compliance.*
 
 Work in Progress:
 
@@ -86,5 +99,6 @@ The area where most of the changes will be in `multi-geth/consensus`
 5. https://github.com/ethereumclassic/ECIPs/issues/362
 6. https://github.com/ethereumclassic/ECIPs/issues/382
 7. https://github.com/ethereum/EIPs/issues/2951
-8. https://vimeo.com/464336957
+8. CDC 15 Call: https://vimeo.com/464336957
 9. https://github.com/ethereumclassic/ECIPs/issues/394
+10. https://ethereumclassic.org/blog/2022-02-23-core-devs-call-22-ecip-1049-call-results
